--- a/style/index.css
+++ b/style/index.css
@@ -55,81 +55,89 @@ a , h2, button,p {
     background-size: cover;
     background-repeat:no-repeat;
 }
-/*Top Navigation Bar ==========================*/
-.nav{
+/*Header =======================================*/
+
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2% 0;
+    padding: 1% 0;
     background-color: whitesmoke;
 }
-.name{
+.name {
     font-size: 3rem;
-    font-family: 'Lobster', cursive;
-    margin-left: 2%;
+    font-family:'Lobster', cursive;
+    margin-left:2%;
 }
 .links{
-    width:50%;
     display: flex;
     justify-content: flex-end;
 }
-.links a{
-    padding: 2% 5%;
+.links a {
+    padding: 5%;
+    border: 1px solid gray;
+    border-radius: 20px;
+    margin: 2%;
+    text-decoration:none;
+    color: #4f4f4f;
 }
-/*About Section ================================*/
-.about{
-    height:50vh;
-    width: 70%;
+/*Top =======================================*/
+.container {
+    width: 80%;
     margin: 2% auto;
-    background-image: url("/Graphics/gracia-dharma-qTlbO6mkQH0-unsplash.jpg");
+    text-align: center;
+
+
+
+}
+.top {
+    background-image: url("/Graphics/scott-gummerson-_5Q1-ae44aw-unsplash.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 70vh;
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    color: whitesmoke;
     font-size: 3rem;
 }
-.text h2 {
-    font-family: 'Zen Kaku Gothic Antique', sans-serif;
-    font-weight: bold;
-    color: #fff;
-}
 .text button {
-    width: 60%;
-    padding: 4% 1%;
+    padding: 3% 12%;
+    position: relative;
+    bottom: 25px;
 }
-/*Projects Section =============================*/
-#projects{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-#projects div {
-    width: 30%;
-    height: 25vh;
-    margin:1%;
-    text-align: center;
-}
-#projects img {
-    width: 100%;
-    max-height: 100%;
-    height:80%;
-    max-height:80%;
-    object-fit: cover;
-}
-/*Footer Section ===============================*/
 
-#contact {
+/* Middle ==================================*/
+.middle {
     width: 100%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top: 2%;
+}
+.box {
+    margin: 3% auto;
+    width: 30%;
+    height:80%;
+
+
+}
+.box img {
+    object-fit: cover;
+    height:30vh;
+    width: 100%;
+}
+
+/*Bottom ======================================*/
+footer {
     padding: 2%;
     text-align: center;
-    background-color: whitesmoke;
+    background-color:whitesmoke;
 }
-#contact button {
-    padding: 1% 3%;
+footer button {
+    padding: 0.5% 2%;
 }
