--- a/style/index.css
+++ b/style/index.css
@@ -105,6 +105,8 @@ header nav {
     background-image: url("/Graphics/blacktitleimg.jpg");
     background-position: center;
     background-size: cover;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
     height: 70vh;
     width: 80%;
     margin: 0 auto;
@@ -132,13 +134,18 @@ header nav {
 }
 .box {
     margin: 3% auto;
+    padding-bottom: 1%;
     width: 30%;
     height:80%;
-
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    border-radius: 5px;
+    text-align: center;
 
 }
 .box img {
     object-fit: cover;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
     height:30vh;
     width: 100%;
 }
@@ -175,7 +182,7 @@ footer button {
     }
     .name {
         font-size: 2rem;
-        margin-right: 4%;
+        margin-right: 2%;
     }
     .links {
         margin: 2% auto;
